# CLOCK_DIVIDER

./: .gitignore  CMakeLists.txt  README.md
arduino/: README.md
arduino/clock_divider/: README.md  platformio.ini
arduino/clock_divider/include/: ArduinoLedEncoder.h  EncoderKnobService.h  OledDisplayService.h  README
arduino/clock_divider/include/physical/: Buttons.h  IlluminatedEncoder.h  Jacks.h  OledDisplay.h
arduino/clock_divider/include/state/: ClockDividers.h  Divider.h  Division.h  OutputManager.h  Program.h
arduino/clock_divider/include/util/: Logger.h  Macros.h  TestSequence.h
arduino/clock_divider/src/: main.cpp  old_main.cpp
arduino/clock_divider/test/: README  test_buttons.cpp  test_divider.cpp
arduino/clock_divider/test/arduino_led_encoder/: test_main.cpp
arduino/clock_divider/test/test_blink/: test_main.cpp
arduino/main/: main.ino
arduino/main/include/: ArduinoBuffer.h  ArduinoClawk.h  ArduinoOutput.h  Clawk.hpp  Output.hpp  README.md  constants.hpp
include/: Buffer.hpp  Clawk.hpp  ClawkOutput.hpp  Division.hpp  Output.hpp  TestAllDivisions.hpp  TestClawk.hpp
tests/: CMakeLists.txt  TestClawk.cpp
tests/include/: TestClawk.hpp  TestIntegration.h  testOnPulseFunction.hpp
